Changed background colors to fix contrast errors

--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,7 @@ article {
 
 /* ------ Navigation Section -------*/
 header {
-  background-color: #EFA088;
+  background-color: #C5431B;
   width: 100%;
 }
 
@@ -214,7 +214,7 @@ h1 {
 #about {
   margin: 0;
   padding-bottom: 5%;
-  background-color: #D87E3D;
+  background-color: #AF5D23;
 }
 
 .figureProfilePic {
@@ -244,7 +244,7 @@ span {
 /* Skills & Tools Section */
 
 #skillsTools {
-  background-color: #D49046;
+  background-color: #A56827;
   padding-bottom: 5%;
 }
 
@@ -400,7 +400,7 @@ figure {
 
 #contact {
   padding: 0;
-  background-color: #EFA088;
+  background-color: #C5431B;
 }
 
 
@@ -418,7 +418,7 @@ h4 {
 }
 
 .footer {
-  background-color: #EFA088;
+  background-color: #C5431B;
 }
 
 
